JumpScript/tests/baselines/reference/invalidNewTarget.es5.errors.txt
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(1,11): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(2,17): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(5,6): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(6,18): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(7,22): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(8,20): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(9,15): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(11,13): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(12,25): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(13,29): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(14,27): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(15,22): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(19,6): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(20,18): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(21,22): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(22,20): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump(23,8): error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.


==== tests/cases/conformance/es6/newTarget/invalidNewTarget.es5.jump (17 errors) ====
    const a = new.target;
              ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
    const b = () => new.target;
                    ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
    
    class C {
        [new.target]() { }
         ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        c() { return new.target; }
                     ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        get d() { return new.target; }
                         ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        set e(_) { _ = new.target; }
                       ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        f = () => new.target;
                  ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
    
        static [new.target]() { }
                ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        static g() { return new.target; }
                            ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        static get h() { return new.target; }
                                ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        static set i(_) { _ = new.target; }
                              ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        static j = () => new.target;
                         ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
    }
    
    const O = {
        [new.target]: undefined,
         ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        k() { return new.target; },
                     ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        get l() { return new.target; },
                         ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        set m(_) { _ = new.target; },
                       ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
        n: new.target,
           ~~~~~~~~~~
!!! error TS17013: Meta-property 'new.target' is only allowed in the body of a function declaration, function expression, or constructor.
    };